feat: 完成库存反馈智能体与MCP探测链路
- 新增库存Feedback MCP测试服务与业务Skill渐进式规则文档

- 完善MCP版本工具探测、发布后绑定刷新与Agent配置选项

- 优化对话页消息展示、执行链路状态与中文交互

- 调整本地开发MySQL默认端口并补充验证测试